# twich_tip_allert_obs_plugin

./: CMakeLists.txt  LICENSE  README.md
installer/: installer.iss
src/: config.cpp  config.hpp  event_parse.cpp  event_parse.hpp  plugin.cpp  telegram_tdlib.cpp  telegram_tdlib.hpp  tip_alert_source.cpp  tip_alert_source.hpp
